[project]
name = "aula16-bootcamp"
version = "0.1.0"
description = ""
authors = [
    {name = "Marcos Soares",email = "marcosjmsoares@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlmodel (>=0.0.25,<0.0.26)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
